Added docs for CTFs
